5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1807_2569.log
== TEST (2019-06-13 01:05:43) 
-- CODE:
from numpy import*
x=array(eval(input("")))
m=x/size(x)
d=0
for i in range(size(x)):
	d=(x[i]-m)**2
f=d/size(x)-1
print(f)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:06:12) 
-- CODE:
from numpy import*
x=array(eval(input("")))
m=x/size(x)
d=0
for i in range(size(x)):
	d=(x[i]-m)**2
f=d/x-1
print(f)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:06:44) 
-- CODE:
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
d=0
for i in range(size(x)):
	d=(x[i]-m)**2
f=d/size(x)-1
print(f)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:06:58) 
-- CODE:
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
d=0
for i in range(size(x)):
	d=(x[i]-m)**2
f=d/size(x)
print(f)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:07:10) 
-- CODE:
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
d=0
for i in range(size(x)):
	d=(x[i]-m)**2
f=d/size(x)
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:07:56) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
d=0
for i in range(size(x)):
	d=(x[i]-m)**2
f=sqrt(d)/size(x)
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:08:08) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
d=0
for i in range(size(x)):
	d=(x[i]-m)**2
f=sqrt(d/size(x))
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:08:29) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)

for i in range(size(x)):
	d=(x[i]-m)**2
f=sqrt(d/size(x))
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:09:04) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
b=0
for i in range(size(x)):
	d=(x[i]-m)**2
	b=d+d
f=sqrt(b/size(x))
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:09:51) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
b=0
for i in range(size(x)):
	d=(x[i]-m)**2
	b=d+d
f=sqrt(b/size(x)-1)
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:10:36) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)

for i in range(size(x)):
	d=(x[i]-m)**2
	b=d+d
f=sqrt(b/size(x)-1)
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:10:45) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)

for i in range(size(x)):
	d=(x[i]-m)**2
	b=d+d
	f=sqrt(b/size(x)-1)
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:11:28) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)

for i in range(size(x)):
	d=(x[i]-m)**2
	b=b+d
f=sqrt(b/size(x)-1)
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:11:35) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
b=0
for i in range(size(x)):
	d=(x[i]-m)**2
	b=b+d
f=sqrt(b/size(x)-1)
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:12:03) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/len(x)
b=0
for i in range(size(x)):
	d=(x[i]-m)**2
	b=b+d
f=sqrt(b/size(x)-1)
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:12:24) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
b=0
for i in range(size(x)):
	d=(x[i]-m)**2
	b=b+d
f=(b/size(x)-1)0.5
print(round(f,3))

-- ERROR:
File "XXXX", line 9
    f=(b/size(x)-1)0.5
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:12:29) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
b=0
for i in range(size(x)):
	d=(x[i]-m)**2
	b=b+d
f=(b/size(x)-1)**0.5
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:13:48) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
b=0
for i in range(size(x)):
	d=(x[i]-m)**2
	b=b+d
f=(b/(size(x)-1))**0.5
print(round(f,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:14:07) 
-- CODE:
from math import*
from numpy import*
x=array(eval(input("")))
m=sum(x)/size(x)
b=0
for i in range(size(x)):
	d=(x[i]-m)**2
	b=b+d
f=(b/(size(x)-1))**0.5
print(round(f,3))

-- EXECUTION TIME:
1.07268
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
